--- a/certifications.html
+++ b/certifications.html
@@ -296,6 +296,8 @@ permalink: /certifications/
   grid-template-columns: repeat(3, 1fr);
   gap: 1.5rem;
   margin-bottom: 3rem;
+  padding: 4px; /* Add padding to prevent clipping on hover */
+  overflow: visible; /* Ensure hover effects are not clipped */
 }
 
 /* Certification Card Wrapper */
@@ -306,11 +308,17 @@ permalink: /certifications/
   border: 1px solid var(--color-border, #e2e8f0);
   border-radius: 16px;
   background: var(--color-bg-primary, #ffffff);
-  overflow: hidden;
+  overflow: visible; /* Changed from hidden to visible to prevent clipping */
   transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
   will-change: transform, box-shadow;
   backface-visibility: hidden;
   -webkit-font-smoothing: antialiased;
+  min-height: 200px; /* Ensure minimum height for content */
+}
+
+/* Ensure inner content doesn't overflow */
+.certification-card-wrapper > * {
+  overflow: visible;
 }
 
 /* Gradient accent line on top */
@@ -335,6 +343,8 @@ permalink: /certifications/
     0 20px 40px -12px rgba(0, 0, 0, 0.15),
     0 0 0 1px rgba(59, 130, 246, 0.1);
   border-color: rgba(59, 130, 246, 0.2);
+  z-index: 10; /* Ensure hovered card appears above others */
+  margin: 0 -4px; /* Add margin to prevent clipping from grid */
 }
 
 .certification-card-wrapper:hover::before,
@@ -372,12 +382,20 @@ permalink: /certifications/
   text-decoration: none;
   color: inherit;
   flex-grow: 1;
+  min-height: 140px; /* Ensure minimum height for content */
   transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
   z-index: 0;
+  overflow: visible; /* Ensure content is not clipped */
+  /* Override global .card styles */
+  background-color: transparent !important;
+  border: none !important;
+  box-shadow: none !important;
+  border-radius: 0 !important;
 }
 
 .certification-card::before {
+  /* Override global .card::before if exists */
   content: '';
   position: absolute;
   top: 0;
@@ -388,7 +406,13 @@ permalink: /certifications/
   opacity: 0;
   transition: opacity 0.3s ease;
   z-index: -1;
+  /* Reset global card::before styles */
+  width: 100% !important;
+  height: 100% !important;
+  transform: none !important;
+  background: linear-gradient(135deg, rgba(59, 130, 246, 0.03), rgba(139, 92, 246, 0.03)) !important;
 }
+
 
 .certification-card:hover::before,
 .certification-card:focus-visible::before {
@@ -499,7 +523,9 @@ permalink: /certifications/
   letter-spacing: -0.01em;
   transition: color 0.3s cubic-bezier(0.4, 0, 0.2, 1), transform 0.3s ease;
   position: relative;
-  display: inline-block;
+  display: block; /* Changed from inline-block to block for better wrapping */
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .certification-card-wrapper:hover .certification-card h3,
@@ -534,6 +560,9 @@ permalink: /certifications/
   line-height: 1.65;
   font-size: 0.95rem;
   transition: color 0.3s ease, opacity 0.3s ease;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 .certification-card-wrapper:hover .certification-card p,
@@ -552,6 +581,8 @@ permalink: /certifications/
   background: var(--color-bg-secondary, #f8fafc);
   flex-wrap: wrap;
   transition: background-color 0.3s ease, border-color 0.3s ease;
+  margin-top: auto; /* Push to bottom */
+  flex-shrink: 0; /* Prevent shrinking */
 }
 
 .certification-card-wrapper:hover .certification-actions,
@@ -975,20 +1006,28 @@ permalink: /certifications/
   .certification-grid {
     grid-template-columns: 1fr;
     gap: 1.25rem;
+    padding: 4px; /* Maintain padding for hover effects */
   }
 
   .certification-card-wrapper {
     border-radius: 12px;
+    min-height: 180px; /* Ensure minimum height on mobile */
+  }
+  
+  .certification-card-wrapper > * {
+    overflow: visible;
   }
 
   .certification-card-wrapper:hover,
   .certification-card-wrapper:focus-within {
     transform: translateY(-8px) scale(1.01);
+    margin: 0 -2px; /* Smaller margin on mobile */
+    z-index: 10;
   }
 
   .certification-card {
     padding: 1.5rem;
-    min-height: 44px; /* Better touch target */
+    min-height: 120px; /* Ensure minimum height for content on mobile */
   }
 
   .certification-icon {
